# tree-sitter-prisma

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  nodejs.yml  publish.yml
bindings/c/: tree-sitter-prisma.h  tree-sitter-prisma.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_prisma/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPrismaTests/: TreeSitterPrismaTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: enum.txt  known_issues.txt
